# project_quadruped

./: .gitignore  AGENT_MEMORY.md  GEMINI.md  REPO_INDEX.md
SpotMicro_Firmware/: platformio.ini
SpotMicro_Firmware/scripts/: udp_diagnostic.py
SpotMicro_Firmware/src/: calibration_main.cpp.bak  cmd_stan_sit.cpp.bak  main.cpp  main.cpp.bak  main.cpp.normal  main.cpp.stable.bak  main_calibrated_smooth.cpp.bak  main_perfect_sit_degrees.cpp.bak  main_production_microros.cpp.bak  main_production_microros_v2.cpp.bak
spotmicro_ws/: Dockerfile  README.md  docker-compose.yaml  prerequisites.ps1  prerequisites.sh  start.bat  start.sh
spotmicro_ws/src/champ/champ_gazebo/launch/: gazebo.launch.py
spotmicro_ws/src/spotmicro_config/: CMakeLists.txt  package.xml
spotmicro_ws/src/spotmicro_config/config/: ros2_controllers.yaml
spotmicro_ws/src/spotmicro_config/config/gait/: gait.yaml
spotmicro_ws/src/spotmicro_config/launch/: bringup.launch.py  gazebo.launch.py  navigate.launch.py  slam.launch.py
spotmicro_ws/src/spotmicro_config/scripts/: calibrate_fl_leg.py  calibrate_rf_leg.py  calibrate_rl_leg.py  calibrate_rr_leg.py  gait_puppet.py  invert_vel.py  keyboard_control.py  keyboard_control_perfect_logging.py.bak  motor_calibration_cli.py  puppet_node.py  spotmicro_unified_controller.py  spotmicro_unified_controller.py.stable_walking
spotmicro_ws/src/spotmicro_description/: CMakeLists.txt  package.xml
spotmicro_ws/src/spotmicro_description/urdf/: spotmicroai.urdf.xacro  spotmicroai.urdf.xacro.backup  spotmicroai.urdf.xacro.backup1
(+2 files in other folders)
